--- a/foo.goreleaser.yml
+++ b/foo.goreleaser.yml
@@ -1,6 +1,7 @@
 brew:
   repo: caarlos0/homebrew-tap
   folder: Formula
+  caveats: "Test formula, dont use it. It doesnt do anything"
 archive:
   replacements:
     darwin: macOS
