--- a/goreleaser.yml
+++ b/goreleaser.yml
@@ -6,6 +6,8 @@ brew:
   caveats: "Test formula, dont use it. It doesnt do anything"
 release:
   github:
+    owner: caarlos0
+    name: test
     draft: true
 archive:
   replacements:
