--- a/goreleaser.yml
+++ b/goreleaser.yml
@@ -22,7 +22,7 @@ builds:
 brew:
   github:
     owner: caarlos0
-    name: test
+    name: homebrew-tap
   folder: Formula
   caveats: "Test formula, dont use it. It doesnt do anything"
 fpm:
