--- a/goreleaser.yml
+++ b/goreleaser.yml
@@ -53,7 +53,7 @@ release:
     owner: caarlos0
     name: test
 archive:
-  format: tar.gz
+  format: binary
   replacements:
     darwin: macOS
     amd64: 64bits
