--- a/goreleaser.yml
+++ b/goreleaser.yml
@@ -45,7 +45,7 @@ brew:
     name: homebrew-tap
   folder: Formula
   caveats: "Test formula, dont use it. It doesnt do anything"
-  test: |
+  test: |4+
     system "#{bin}/foo"
     system "#{bin}/moises"
 fpm:
