--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -45,7 +45,7 @@ brew:
     name: homebrew-tap
   folder: Formula
   caveats: "Test formula, dont use it. It doesnt do anything"
-  test: |2
+  test: |
     system "#{bin}/foo"
     system "#{bin}/moises"
 fpm:
