fake commit for version v6.0.1

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -60,8 +60,15 @@ release:
     owner: caarlos0
     name: test
 archive:
-  # format: binary
-  replacements:
-    darwin: macOS
-    amd64: 64bits
-    windows: Windaum
+  format: binary
+  # replacements:
+  #   darwin: macOS
+  #   amd64: 64bits
+  #   windows: Windaum
+dockers:
+  - image: caarlos0/moises
+    binary: moises
+  - image: caarlos0/foo
+    binary: foo
+  - image: caarlos0/bar
+    binary: bar
