--- a/.goreleaser.docker-multiple.yml
+++ b/.goreleaser.docker-multiple.yml
@@ -1,5 +1,7 @@
 # This is an example goreleaser.yaml file with some sane defaults.
 # Make sure to check the documentation at http://goreleaser.com
+github_urls:
+  skip_tls_verify: true
 builds:
 - binary: moises
   env:
