--- a/.goreleaser.4.yml
+++ b/.goreleaser.4.yml
@@ -34,7 +34,15 @@ builds:
   - amd64
   - 386
 archives:
-- replacements:
+- id: targz
+  replacements:
+    darwin: Darwin
+    linux: Linux
+    windows: Windows
+    386: i386
+    amd64: x86_64
+- id: binaries
+  replacements:
     darwin: Darwin
     linux: Linux
     windows: Windows
