--- a/.goreleaser-docker-multiarch.yml
+++ b/.goreleaser-docker-multiarch.yml
@@ -2,30 +2,28 @@
 # Make sure to check the documentation at http://goreleaser.com
 builds:
 - env:
-  - CGO_ENABLED=1
-  binary: mybin
-  env:
   - CGO_ENABLED=0
+  binary: mybin
   main: ./main.go
   goos:
   - linux
   goarch:
   - amd64
   - arm64
-snapshot:
-  name_template: '{{ .Tag | incminor }}-net'
 dockers:
-- name_templates: ["caarlos0/gmarchtest:{{ .Version }}-amd64"]
+- image_templates: ["caarlos0/gmarchtest:{{ .Version }}-amd64"]
   binaries: ["mybin"]
+  use_buildx: true
   dockerfile: Dockerfile.multiarch
-  build_flag_templates: ["--build-arg=ARCH=amd64"]
-- name_templates: ["caarlos0/gmarchtest:{{ .Version }}-arm64v8"]
+  build_flag_templates: ["--platform=linux/amd64"]
+- image_templates: ["caarlos0/gmarchtest:{{ .Version }}-arm64"]
   binaries: ["mybin"]
+  use_buildx: true
   goarch: arm64
   dockerfile: Dockerfile.multiarch
-  build_flag_templates: ["--build-arg=ARCH=arm64v8"]
+  build_flag_templates: ["--platform=linux/arm64"]
 docker_manifests:
 - name_template: caarlos0/gmarchtest:{{ .Version }}
-  image_name_templates:
+  image_templates:
   - caarlos0/gmarchtest:{{ .Version }}-amd64
-  - caarlos0/gmarchtest:{{ .Version }}-arm64v8
+  - caarlos0/gmarchtest:{{ .Version }}-arm64
